updates to fix spacing on card titles

--- a/_sass/_cards.scss
+++ b/_sass/_cards.scss
@@ -37,6 +37,10 @@
             }
         }
         
+        h2 > a {
+            display: table-cell;
+        }
+        
         img {
             @include border(solid 1px $divider-color, bottom);
         }
